refactor: update MapBenchmark to use UUID String keys, streamline setup logic, and integrate fastutil for enhanced performance