@@ -3,9 +3,11 @@ package io.github.bluuewhale.hashsmith;
 import java.util.HashMap;
 import java.util.Random;
 import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.IntStream;
 
+import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
 import org.eclipse.collections.impl.map.mutable.UnifiedMap;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
@@ -19,67 +21,86 @@ import org.openjdk.jmh.annotations.Scope;
 import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Warmup;
+import org.openjdk.jmh.infra.Blackhole;
 
-@Fork(2)
+@Fork(
+    value=1,
+    jvmArgsAppend = {
+        "--add-modules=jdk.incubator.vector",
+        "--enable-preview",
+        "-XX:+UnlockDiagnosticVMOptions",
+        "-XX:+DebugNonSafepoints",
+        "-XX:StartFlightRecording=name=JMHProfile,filename=jmh-profile.jfr,settings=profile",
+        "-XX:FlightRecorderOptions=stackdepth=256"
+    }
+)
 @Warmup(iterations = 3)
-@Measurement(iterations = 5, time = 3, timeUnit = TimeUnit.SECONDS)
+@Measurement(iterations = 3)
 @BenchmarkMode(Mode.AverageTime)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
 public class MapBenchmark {
 
+	private static String randomUuidString(Random rnd) {
+		return new UUID(rnd.nextLong(), rnd.nextLong()).toString();
+	}
+
 	@State(Scope.Benchmark)
 	public static class ReadState {
-		@Param({ "10000", "100000", "200000", "400000" })
+//		@Param({ "10000", "100000", "200000", "400000" })
+        @Param({ "100000" })
 		int size;
 
-		SwissMap<Integer, Integer> swiss;
-		RobinHoodMap<Integer, Integer> robin;
-		UnifiedMap<Integer, Integer> unified;
-		HashMap<Integer, Integer> jdk;
-		int[] keys;
-		int[] misses;
+		SwissMap<String, Object> swiss;
+		RobinHoodMap<String, Object> robin;
+		Object2ObjectOpenHashMap<String, Object> fastutil;
+		UnifiedMap<String, Object> unified;
+		HashMap<String, Object> jdk;
+		String[] keys;
+		String[] misses;
 		Random rnd;
 		int nextKeyIndex;
 		int nextMissIndex;
-		Set<Integer> keySet;
+		Set<String> keySet;
 
 		@Setup(Level.Trial)
 		public void setup() {
 			rnd = new Random(123);
-			keys = new int[size];
-			misses = new int[size];
+			keys = new String[size];
+			misses = new String[size];
 			keySet = new java.util.HashSet<>(size * 2);
 			for (int i = 0; i < size; i++) {
-				int k = rnd.nextInt();
+				var k = randomUuidString(rnd);
 				keys[i] = k;
 				keySet.add(k);
 			}
 			for (int i = 0; i < size; i++) {
-				int miss;
-				do { miss = rnd.nextInt(); } while (keySet.contains(miss));
+				String miss;
+				do { miss = randomUuidString(rnd); } while (keySet.contains(miss));
 				misses[i] = miss;
 			}
 			nextKeyIndex = 0;
 			nextMissIndex = 0;
 			swiss = new SwissMap<>();
 			robin = new RobinHoodMap<>();
+			fastutil = new Object2ObjectOpenHashMap<>();
 			unified = new UnifiedMap<>();
 			jdk = new HashMap<>();
 			for (int i = 0; i < size; i++) {
-				swiss.put(keys[i], i);
-				robin.put(keys[i], i);
-				unified.put(keys[i], i);
-				jdk.put(keys[i], i);
+				swiss.put(keys[i], "dummy");
+				robin.put(keys[i], "dummy");
+				fastutil.put(keys[i], "dummy");
+				unified.put(keys[i], "dummy");
+				jdk.put(keys[i], "dummy");
 			}
 		}
 
-		int nextHitKey() {
-			int k = keys[nextKeyIndex];
+		String nextHitKey() {
+			var k = keys[nextKeyIndex];
 			nextKeyIndex = (nextKeyIndex + 1) % keys.length;
 			return k;
 		}
-		int nextMissingKey() {
-			int k = misses[nextMissIndex];
+		String nextMissingKey() {
+			var k = misses[nextMissIndex];
 			nextMissIndex = (nextMissIndex + 1) % misses.length;
 			return k;
 		}
@@ -90,52 +111,53 @@ public class MapBenchmark {
         @Param({ "10000", "100000", "200000", "400000" })
 		int size;
 
-		int[] keys;
-		int[] misses;
+		String[] keys;
+		String[] misses;
 		Random rnd;
-		int putValue;
 		int existingIndex;
 		int missingIndex;
-		SwissMap<Integer, Integer> swiss;
-		RobinHoodMap<Integer, Integer> robin;
-		UnifiedMap<Integer, Integer> unified;
-		HashMap<Integer, Integer> jdk;
+		SwissMap<String, Object> swiss;
+		RobinHoodMap<String, Object> robin;
+		Object2ObjectOpenHashMap<String, Object> fastutil;
+		UnifiedMap<String, Object> unified;
+		HashMap<String, Object> jdk;
 
 		@Setup(Level.Trial)
 		public void initKeys() {
 			rnd = new Random(456);
-			keys = IntStream.range(0, size).map(i -> rnd.nextInt()).toArray();
-			misses = IntStream.range(0, size).map(i -> rnd.nextInt()).toArray();
+			keys = IntStream.range(0, size).mapToObj(i -> randomUuidString(rnd)).toArray(String[]::new);
+			misses = IntStream.range(0, size).mapToObj(i -> randomUuidString(rnd)).toArray(String[]::new);
 		}
 
 		@Setup(Level.Iteration)
 		public void resetMaps() {
 			swiss = new SwissMap<>();
 			robin = new RobinHoodMap<>();
+			fastutil = new Object2ObjectOpenHashMap<>();
 			unified = new UnifiedMap<>();
 			jdk = new HashMap<>();
 			for (int i = 0; i < size; i++) {
-				swiss.put(keys[i], i);
-				robin.put(keys[i], i);
-				unified.put(keys[i], i);
-				jdk.put(keys[i], i);
+				swiss.put(keys[i], "dummy");
+				robin.put(keys[i], "dummy");
+				fastutil.put(keys[i], "dummy");
+				unified.put(keys[i], "dummy");
+				jdk.put(keys[i], "dummy");
 			}
-			putValue = 0;
 			existingIndex = 0;
 			missingIndex = 0;
 		}
 
-		int nextHitKey() {
-			int k = keys[existingIndex];
+		String nextHitKey() {
+			var k = keys[existingIndex];
 			existingIndex = (existingIndex + 1) % keys.length;
 			return k;
 		}
-		int nextMissingKey() {
-			int k = misses[missingIndex];
+		String nextMissingKey() {
+			var k = misses[missingIndex];
 			missingIndex = (missingIndex + 1) % misses.length;
 			return k;
 		}
-		int nextValue() { return ++putValue; }
+		String nextValue() { return "dummy"; }
 	}
 
 	@State(Scope.Thread)
@@ -143,28 +165,29 @@ public class MapBenchmark {
 		@Param({ "100", "1000", "10000" })
 		int size;
 
-		SwissMap<Integer, Integer> swiss;
-		RobinHoodMap<Integer, Integer> robin;
-		UnifiedMap<Integer, Integer> unified;
-		HashMap<Integer, Integer> jdk;
-		int[] keys;
-		int[] misses;
+		SwissMap<String, Object> swiss;
+		RobinHoodMap<String, Object> robin;
+		Object2ObjectOpenHashMap<String, Object> fastutil;
+		UnifiedMap<String, Object> unified;
+		HashMap<String, Object> jdk;
+		String[] keys;
+		String[] misses;
 		Random rnd;
 
 		@Setup(Level.Trial)
 		public void initData() {
 			rnd = new Random(789);
-			keys = new int[size];
-			misses = new int[size];
+			keys = new String[size];
+			misses = new String[size];
 			var keySet = new java.util.HashSet<>(size * 2);
 			for (int i = 0; i < size; i++) {
-				int k = rnd.nextInt();
+				var k = randomUuidString(rnd);
 				keys[i] = k;
 				keySet.add(k);
 			}
 			for (int i = 0; i < size; i++) {
-				int miss;
-				do { miss = rnd.nextInt(); } while (keySet.contains(miss));
+				String miss;
+				do { miss = randomUuidString(rnd); } while (keySet.contains(miss));
 				misses[i] = miss;
 			}
 		}
@@ -173,196 +196,215 @@ public class MapBenchmark {
 		public void resetMaps() {
 			swiss = new SwissMap<>();
 			robin = new RobinHoodMap<>();
+			fastutil = new Object2ObjectOpenHashMap<>();
 			unified = new UnifiedMap<>();
 			jdk = new HashMap<>();
 			for (int i = 0; i < size; i++) {
-				swiss.put(keys[i], i);
-				robin.put(keys[i], i);
-				unified.put(keys[i], i);
-				jdk.put(keys[i], i);
+				var value = new Object();
+				swiss.put(keys[i], value);
+				robin.put(keys[i], value);
+				fastutil.put(keys[i], value);
+				unified.put(keys[i], value);
+				jdk.put(keys[i], value);
 			}
 		}
 
-		int hitKey() { return keys[rnd.nextInt(keys.length)]; }
-		int missKey() { return misses[rnd.nextInt(misses.length)]; }
+		String hitKey() { return keys[rnd.nextInt(keys.length)]; }
+		String missKey() { return misses[rnd.nextInt(misses.length)]; }
 	}
 
 	// ------- get hit/miss -------
-//	@Benchmark
-	public int swissGetHit(ReadState s) {
-		return s.swiss.get(s.nextHitKey());
+	@Benchmark
+	public void swissGetHit(ReadState s, Blackhole bh) {
+		bh.consume(s.swiss.get(s.nextHitKey()));
+	}
+
+	@Benchmark
+	public void robinGetHit(ReadState s, Blackhole bh) {
+        bh.consume(s.robin.get(s.nextHitKey()));
+	}
+
+	@Benchmark
+	public void fastutilGetHit(ReadState s, Blackhole bh) {
+        bh.consume(s.fastutil.get(s.nextHitKey()));
+	}
+
+	@Benchmark
+	public void unifiedGetHit(ReadState s, Blackhole bh) {
+        bh.consume(s.unified.get(s.nextHitKey()));
+	}
+
+	@Benchmark
+	public void jdkGetHit(ReadState s, Blackhole bh) {
+        bh.consume(s.jdk.get(s.nextHitKey()));
 	}
 
 //	@Benchmark
-	public int robinGetHit(ReadState s) {
-		return s.robin.get(s.nextHitKey());
+	public void swissGetMiss(ReadState s, Blackhole bh) {
+		bh.consume(s.swiss.get(s.nextMissingKey()));
+	}
+
+//	@Benchmark
+	public void robinGetMiss(ReadState s, Blackhole bh) {
+        bh.consume(s.robin.get(s.nextMissingKey()));
+	}
+
+//	@Benchmark
+	public void fastutilGetMiss(ReadState s, Blackhole bh) {
+        bh.consume(s.fastutil.get(s.nextMissingKey()));
 	}
 
 //	 @Benchmark
-	public int unifiedGetHit(ReadState s) {
-		return s.unified.get(s.nextHitKey());
+	public void unifiedGetMiss(ReadState s, Blackhole bh) {
+        bh.consume(s.unified.get(s.nextMissingKey()));
 	}
 
 //	@Benchmark
-	public int jdkGetHit(ReadState s) {
-		return s.jdk.get(s.nextHitKey());
-	}
-
-//	@Benchmark
-	public int swissGetMiss(ReadState s) {
-		Integer v = s.swiss.get(s.nextMissingKey());
-		return v == null ? -1 : v;
-	}
-
-//	@Benchmark
-	public int robinGetMiss(ReadState s) {
-		Integer v = s.robin.get(s.nextMissingKey());
-		return v == null ? -1 : v;
-	}
-
-//	 @Benchmark
-	public int unifiedGetMiss(ReadState s) {
-		Integer v = s.unified.get(s.nextMissingKey());
-		return v == null ? -1 : v;
-	}
-
-//	@Benchmark
-	public int jdkGetMiss(ReadState s) {
-		Integer v = s.jdk.get(s.nextMissingKey());
-		return v == null ? -1 : v;
-	}
-
-	// ------- iterate -------
-//	@Benchmark
-	public long swissIterate(ReadState s) {
-		long sum = 0;
-		for (var e : s.swiss.entrySet()) sum += e.getValue();
-		return sum;
-	}
-
-//	@Benchmark
-	public long robinIterate(ReadState s) {
-		long sum = 0;
-		for (var e : s.robin.entrySet()) sum += e.getValue();
-		return sum;
-	}
-
-	// @Benchmark
-	public long unifiedIterate(ReadState s) {
-		long sum = 0;
-		for (var e : s.unified.entrySet()) sum += e.getValue();
-		return sum;
-	}
-
-//	@Benchmark
-	public long jdkIterate(ReadState s) {
-		long sum = 0;
-		for (var e : s.jdk.entrySet()) sum += e.getValue();
-		return sum;
+	public void jdkGetMiss(ReadState s, Blackhole bh) {
+        bh.consume(s.jdk.get(s.nextMissingKey()));
 	}
 
 	// ------- mutating: put hit/miss -------
 //	@Benchmark
-	public int swissPutHit(MutateState s) {
-		int k = s.nextHitKey();
-		return s.swiss.put(k, s.nextValue());
+	public void swissPutHit(MutateState s, Blackhole bh) {
+        bh.consume(s.swiss.put(s.nextHitKey(), s.nextValue()));
 	}
 
 	//  @Benchmark
-	public int robinPutHit(MutateState s) {
-		int k = s.nextHitKey();
-		Integer prev = s.robin.put(k, s.nextValue());
-		return prev == null ? -1 : prev;
+	public void robinPutHit(MutateState s, Blackhole bh) {
+        bh.consume(s.robin.put(s.nextHitKey(), s.nextValue()));
+	}
+
+//  @Benchmark
+	public void fastutilPutHit(MutateState s, Blackhole bh) {
+        bh.consume(s.fastutil.put(s.nextHitKey(), s.nextValue()));
 	}
 
 	// @Benchmark
-	public int unifiedPutHit(MutateState s) {
-		int k = s.nextHitKey();
-		Integer prev = s.unified.put(k, s.nextValue());
-		return prev == null ? -1 : prev;
+	public void unifiedPutHit(MutateState s, Blackhole bh) {
+        bh.consume(s.unified.put(s.nextHitKey(), s.nextValue()));
 	}
 
 //	@Benchmark
-	public int jdkPutHit(MutateState s) {
-		int k = s.nextHitKey();
-		return s.jdk.put(k, s.nextValue());
+	public void jdkPutHit(MutateState s, Blackhole bh) {
+        bh.consume(s.jdk.put(s.nextHitKey(), s.nextValue()));
 	}
 
 //	@Benchmark
-	public int swissPutMiss(MutateState s) {
-		int k = s.nextMissingKey();
-		Integer prev = s.swiss.put(k, s.nextValue());
-		return prev == null ? -1 : prev;
+	public void swissPutMiss(MutateState s, Blackhole bh) {
+        bh.consume(s.swiss.put(s.nextMissingKey(), s.nextValue()));
 	}
 
 	//  @Benchmark
-	public int robinPutMiss(MutateState s) {
-		int k = s.nextMissingKey();
-		Integer prev = s.robin.put(k, s.nextValue());
-		return prev == null ? -1 : prev;
+	public void robinPutMiss(MutateState s, Blackhole bh) {
+        bh.consume(s.robin.put(s.nextMissingKey(), s.nextValue()));
+	}
+
+// @Benchmark
+	public void fastutilPutMiss(MutateState s, Blackhole bh) {
+        bh.consume(s.fastutil.put(s.nextMissingKey(), s.nextValue()));
 	}
 
 	// @Benchmark
-	public int unifiedPutMiss(MutateState s) {
-		int k = s.nextMissingKey();
-		Integer prev = s.unified.put(k, s.nextValue());
-		return prev == null ? -1 : prev;
+	public void unifiedPutMiss(MutateState s, Blackhole bh) {
+        bh.consume(s.unified.put(s.nextMissingKey(), s.nextValue()));
 	}
 
 //	@Benchmark
-	public int jdkPutMiss(MutateState s) {
-		int k = s.nextMissingKey();
-		Integer prev = s.jdk.put(k, s.nextValue());
-		return prev == null ? -1 : prev;
+	public void jdkPutMiss(MutateState s, Blackhole bh) {
+        bh.consume(s.jdk.put(s.nextMissingKey(), s.nextValue()));
 	}
 
 	// ------- remove hit/miss -------
 	// @Benchmark
-	public int swissRemoveHit(RemoveState s) {
-		Integer prev = s.swiss.remove(s.hitKey());
-		return prev == null ? -1 : prev;
+	public void swissRemoveHit(RemoveState s, Blackhole bh) {
+        bh.consume(s.swiss.remove(s.hitKey()));
 	}
 
 	// @Benchmark
-	public int robinRemoveHit(RemoveState s) {
-		Integer prev = s.robin.remove(s.hitKey());
-		return prev == null ? -1 : prev;
+	public void robinRemoveHit(RemoveState s, Blackhole bh) {
+        bh.consume(s.robin.remove(s.hitKey()));
 	}
 
 	// @Benchmark
-	public int unifiedRemoveHit(RemoveState s) {
-		Integer prev = s.unified.remove(s.hitKey());
-		return prev == null ? -1 : prev;
+	public void fastutilRemoveHit(RemoveState s, Blackhole bh) {
+        bh.consume(s.fastutil.remove(s.hitKey()));
 	}
 
 	// @Benchmark
-	public int jdkRemoveHit(RemoveState s) {
-		Integer prev = s.jdk.remove(s.hitKey());
-		return prev == null ? -1 : prev;
+	public void unifiedRemoveHit(RemoveState s, Blackhole bh) {
+        bh.consume(s.unified.remove(s.hitKey()));
 	}
 
 	// @Benchmark
-	public int swissRemoveMiss(RemoveState s) {
-		Integer prev = s.swiss.remove(s.missKey());
-		return prev == null ? -1 : prev;
+	public void jdkRemoveHit(RemoveState s, Blackhole bh) {
+        bh.consume(s.jdk.remove(s.hitKey()));
 	}
 
 	// @Benchmark
-	public int robinRemoveMiss(RemoveState s) {
-		Integer prev = s.robin.remove(s.missKey());
-		return prev == null ? -1 : prev;
+	public void swissRemoveMiss(RemoveState s, Blackhole bh) {
+        bh.consume(s.swiss.remove(s.missKey()));
 	}
 
 	// @Benchmark
-	public int unifiedRemoveMiss(RemoveState s) {
-		Integer prev = s.unified.remove(s.missKey());
-		return prev == null ? -1 : prev;
+	public void robinRemoveMiss(RemoveState s, Blackhole bh) {
+        bh.consume(s.robin.remove(s.missKey()));
 	}
 
 	// @Benchmark
-	public int jdkRemoveMiss(RemoveState s) {
-		Integer prev = s.jdk.remove(s.missKey());
-		return prev == null ? -1 : prev;
+	public void fastutilRemoveMiss(RemoveState s, Blackhole bh) {
+        bh.consume(s.fastutil.remove(s.missKey()));
 	}
+
+	// @Benchmark
+	public void unifiedRemoveMiss(RemoveState s, Blackhole bh) {
+        bh.consume(s.unified.remove(s.missKey()));
+	}
+
+	// @Benchmark
+	public void jdkRemoveMiss(RemoveState s, Blackhole bh) {
+        bh.consume(s.jdk.remove(s.missKey()));
+	}
+
+    // ------- iterate -------
+//	@Benchmark
+    public void swissIterate(ReadState s, Blackhole bh) {
+        for (var e : s.swiss.entrySet()) {
+            bh.consume(e.getKey());
+            bh.consume(e.getValue());
+        }
+    }
+
+    //	@Benchmark
+    public void robinIterate(ReadState s, Blackhole bh) {
+        for (var e : s.robin.entrySet()) {
+            bh.consume(e.getKey());
+            bh.consume(e.getValue());
+        }
+    }
+
+    //	@Benchmark
+    public void fastutilIterate(ReadState s, Blackhole bh) {
+        for (var e : s.fastutil.object2ObjectEntrySet()) {
+            bh.consume(e.getKey());
+            bh.consume(e.getValue());
+        }
+    }
+
+    // @Benchmark
+    public void unifiedIterate(ReadState s, Blackhole bh) {
+        for (var e : s.unified.entrySet()) {
+            bh.consume(e.getKey());
+            bh.consume(e.getValue());
+        }
+    }
+
+    //	@Benchmark
+    public void jdkIterate(ReadState s, Blackhole bh) {
+        for (var e : s.jdk.entrySet()) {
+            bh.consume(e.getKey());
+            bh.consume(e.getValue());
+        }
+    }
 }
 
